# scania-java-v2

./: .gitignore  DEPLOYMENT_PORT_FIX.md  Dockerfile  RDS_CONFIGURATION_REQUIRED.md  README.md  README_RDS.md  URGENT_500_ERROR_DIAGNOSIS.md  build_context_index.py  docker-compose-pipeline.yml  feature_build_orchestrator.py  fix_compile_errors.py  generate_test_cases.py  main.py  migrate_to_pure_java.py  migrate_with_claude.py  output_context.json  pom.xml  pyproject.toml  requirements.txt  test.py  ui_global_context.html  ui_global_context_server.py  ui_index.html  ui_server.py
.github/workflows/: deploy.yml  test-branch.yml
artifacts/: output_1.java
config/: config.yaml
context_index/: HS1210_n1.json  HS1210_n1779.json  HS1210_n1838.json  HS1210_n1919.json  HS1210_n1983.json  HS1210_n2010.json  HS1210_n2020.json  HS1210_n404.json  HS1212_n1.json  HS1212_n2575.json  HS1212_n2614.json  HS1212_n2647.json  HS1212_n2671.json  HS1212_n2698.json  HS1212_n2757.json  HS1212_n2793.json  HS1212_n3187.json  HS1212_n3215.json  HS1212_n3357.json  HS1212_n3445.json  HS1212_n3455.json  HS1212_n3468.json  HS1212_n498.json  manifest.json
docs/: TECHNICAL_ARCHITECTURE_AND_CONTEXT_BUILDING.md  WARRANTY_CLAIM_WORKFLOW.md
global_context/: build_call_graph.py  build_call_graph_with_rpg.py  call_graph.json  call_graph_enriched.json  db_registry.json  neo4j_export.cypher
global_context/programs/: HS1210.program.json  HS1212.program.json
migrations/HS1210_n404_pure_java/: pom.xml
src/pipelines/: code_generation_pipeline.py  semantic_pipeline.py
warranty_demo/: pom.xml
(+197 files in other folders)
